# CChat

./: .gitignore  CChat.pro  CMakeLists.txt  HttpMgr.cpp  HttpMgr.h  README.md  build.sh  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatpage.cpp  chatpage.ui  chatuserlist.cpp  chatuserwid.cpp  chatuserwid.h  chatuserwid.ui  clickedbtn.cpp  clickedbtn.h  clickedlabel.cpp  clickedlabel.h  customizeedit.cpp  customizeedit.h  global.cpp  global.h  listitembase.cpp  listitembase.h  loadingdlg.cpp  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rc.qrc  registerdialog.cpp  registerdialog.h  registerdialog.ui  resetdialog.cpp  resetdialog.h  (+7 more)
ChatServer/: AsioServicePool.cpp  AsioServicePool.h  CMakeLists.txt  CServer.cpp  CServer.h  CSession.cpp  CSession.h  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServer.cpp  ChatServer.sln  ChatServer.vcxproj  ChatServer.vcxproj.filters  ChatServiceImpl.cpp  ChatServiceImpl.h  ConfigMgr.cpp  LogicSystem.cpp  LogicSystem.h  MsgNode.cpp  MsgNode.h  MySqlMgr.cpp  MySqlMgr.h  MySqlPool.cpp  MySqlPool.h  PropertySheet.props  RedisMgr.cpp  RedisMgr.h  StatusGrpcClient.cpp  StatusGrpcClient.h  config.ini  const.h  message.proto
ChatServer2/: CMakeLists.txt  CServer.cpp  CSession.cpp  CSession.h  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServer.cpp  ChatServer.vcxproj  ChatServer.vcxproj.filters  ChatServiceImpl.cpp  ConfigMgr.cpp  ConfigMgr.h  LogicSystem.cpp  LogicSystem.h  MySqlMgr.cpp  MySqlMgr.h  MySqlPool.cpp  MySqlPool.h  RedisMgr.cpp  UserMgr.cpp  config.ini  const.cpp  const.h
(+189 files in other folders)
